Changed dimension precision to float